# forex-css-stack

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: mq4_algorithm_summary.md  technical_decisions.md
scripts/: backtest.py  build_dataset.py  build_features.py  download_data.py  run_visual_hybrid.py  train.py
src/forex_css/: __init__.py  constants.py
src/forex_css/backtest/: engine.py
src/forex_css/data/: loaders.py  schema.py
src/forex_css/data/providers/: oanda.py  twelvedata.py
src/forex_css/dataset/: builder.py
src/forex_css/features/: single_tf.py
src/forex_css/indicators/: css.py
src/forex_css/models/: training.py
src/forex_css/utils/: timeframe.py
tests/: test_css.py  test_dataset_builder.py
