[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forex-css"
version = "0.1.0"
description = "Currency Slope Strength (CSS) research and trading stack in Python."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "requests>=2.32",
  "scikit-learn>=1.5",
  "lightgbm>=4.3",
  "matplotlib>=3.8",
  "pytest>=8.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
